feat: Implement M12 - UPDATE and DELETE SQL statements